Acrescenta testes e corrige gráficos

--- a/Em Grupo/Trabalho Intermediário/ExtraçãoDeDados.ipynb
+++ b/Em Grupo/Trabalho Intermediário/ExtraçãoDeDados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -61,11 +61,11 @@
      "text": [
       "Nick: **********\n",
       "ID: 200304136\n",
-      "Nível: 89\n",
-      "Total de Partidas: 3767\n",
-      "Total de Tempo de Jogo (estimado): 2197 horas\n",
+      "Nível: 91\n",
+      "Total de Partidas: 3777\n",
+      "Total de Tempo de Jogo (estimado): 2203 horas\n",
       "Campeão preferido: Yasuo\n",
-      "Maestria com o Campeão: 124061\n",
+      "Maestria com o Campeão: 125119\n",
       "Elo: GOLD\n",
       "Divisão: I\n",
       "Vitórias: 11\n",
@@ -74,11 +74,11 @@
       "==================================================================\n",
       "Nick: **********\n",
       "ID: 213331961\n",
-      "Nível: 164\n",
-      "Total de Partidas: 4778\n",
-      "Total de Tempo de Jogo (estimado): 2787 horas\n",
+      "Nível: 166\n",
+      "Total de Partidas: 4809\n",
+      "Total de Tempo de Jogo (estimado): 2805 horas\n",
       "Campeão preferido: Braum\n",
-      "Maestria com o Campeão: 136457\n",
+      "Maestria com o Campeão: 141776\n",
       "Elo: PLATINUM\n",
       "Divisão: III\n",
       "Vitórias: 142\n",
@@ -88,10 +88,10 @@
       "Nick: **********\n",
       "ID: 205747689\n",
       "Nível: 86\n",
-      "Total de Partidas: 1729\n",
-      "Total de Tempo de Jogo (estimado): 1008 horas\n",
+      "Total de Partidas: 1738\n",
+      "Total de Tempo de Jogo (estimado): 1013 horas\n",
       "Campeão preferido: Miss Fortune\n",
-      "Maestria com o Campeão: 24000\n",
+      "Maestria com o Campeão: 24135\n",
       "Elo: \n",
       "Divisão: \n",
       "Vitórias: \n",
@@ -100,11 +100,11 @@
       "==================================================================\n",
       "Nick: **********\n",
       "ID: 201458849\n",
-      "Nível: 114\n",
-      "Total de Partidas: 3704\n",
-      "Total de Tempo de Jogo (estimado): 2160 horas\n",
+      "Nível: 115\n",
+      "Total de Partidas: 3707\n",
+      "Total de Tempo de Jogo (estimado): 2162 horas\n",
       "Campeão preferido: Janna\n",
-      "Maestria com o Campeão: 142484\n",
+      "Maestria com o Campeão: 142635\n",
       "Elo: GOLD\n",
       "Divisão: IV\n",
       "Vitórias: 36\n",
@@ -113,24 +113,24 @@
       "==================================================================\n",
       "Nick: **********\n",
       "ID: 210725644\n",
-      "Nível: 113\n",
-      "Total de Partidas: 3166\n",
-      "Total de Tempo de Jogo (estimado): 1846 horas\n",
+      "Nível: 115\n",
+      "Total de Partidas: 3185\n",
+      "Total de Tempo de Jogo (estimado): 1857 horas\n",
       "Campeão preferido: Tahm Kench\n",
       "Maestria com o Campeão: 206102\n",
       "Elo: SILVER\n",
       "Divisão: II\n",
       "Vitórias: 76\n",
-      "Derrotas: 85\n",
-      "Porcentagem de Vitórias: 47.2%\n",
+      "Derrotas: 86\n",
+      "Porcentagem de Vitórias: 46.91%\n",
       "==================================================================\n",
       "Nick: **********\n",
       "ID: 215095300\n",
-      "Nível: 138\n",
-      "Total de Partidas: 3332\n",
-      "Total de Tempo de Jogo (estimado): 1943 horas\n",
+      "Nível: 140\n",
+      "Total de Partidas: 3379\n",
+      "Total de Tempo de Jogo (estimado): 1971 horas\n",
       "Campeão preferido: Zed\n",
-      "Maestria com o Campeão: 218438\n",
+      "Maestria com o Campeão: 219967\n",
       "Elo: PLATINUM\n",
       "Divisão: V\n",
       "Vitórias: 166\n",
@@ -140,8 +140,8 @@
       "Nick: **********\n",
       "ID: 202135935\n",
       "Nível: 104\n",
-      "Total de Partidas: 2821\n",
-      "Total de Tempo de Jogo (estimado): 1645 horas\n",
+      "Total de Partidas: 2819\n",
+      "Total de Tempo de Jogo (estimado): 1644 horas\n",
       "Campeão preferido: Rek'Sai\n",
       "Maestria com o Campeão: 134568\n",
       "Elo: PLATINUM\n",
@@ -152,9 +152,9 @@
       "==================================================================\n",
       "Nick: **********\n",
       "ID: 200585791\n",
-      "Nível: 121\n",
-      "Total de Partidas: 4091\n",
-      "Total de Tempo de Jogo (estimado): 2386 horas\n",
+      "Nível: 122\n",
+      "Total de Partidas: 4100\n",
+      "Total de Tempo de Jogo (estimado): 2391 horas\n",
       "Campeão preferido: Poppy\n",
       "Maestria com o Campeão: 200136\n",
       "Elo: DIAMOND\n",
@@ -192,49 +192,49 @@
       "Nick: **********\n",
       "ID: 217440093\n",
       "Nível: 113\n",
-      "Total de Partidas: 1328\n",
-      "Total de Tempo de Jogo (estimado): 774 horas\n",
+      "Total de Partidas: 1340\n",
+      "Total de Tempo de Jogo (estimado): 781 horas\n",
       "Campeão preferido: Zoe\n",
-      "Maestria com o Campeão: 109381\n",
+      "Maestria com o Campeão: 110873\n",
       "Elo: SILVER\n",
       "Divisão: IV\n",
-      "Vitórias: 32\n",
-      "Derrotas: 42\n",
-      "Porcentagem de Vitórias: 43.24%\n",
+      "Vitórias: 17\n",
+      "Derrotas: 26\n",
+      "Porcentagem de Vitórias: 39.53%\n",
       "==================================================================\n",
       "Nick: **********\n",
       "ID: 204265094\n",
-      "Nível: 79\n",
-      "Total de Partidas: 1149\n",
-      "Total de Tempo de Jogo (estimado): 670 horas\n",
+      "Nível: 80\n",
+      "Total de Partidas: 1157\n",
+      "Total de Tempo de Jogo (estimado): 674 horas\n",
       "Campeão preferido: Alistar\n",
-      "Maestria com o Campeão: 90727\n",
+      "Maestria com o Campeão: 91092\n",
       "Elo: GOLD\n",
       "Divisão: V\n",
-      "Vitórias: 76\n",
-      "Derrotas: 67\n",
-      "Porcentagem de Vitórias: 53.15%\n",
+      "Vitórias: 100\n",
+      "Derrotas: 87\n",
+      "Porcentagem de Vitórias: 53.48%\n",
       "==================================================================\n",
       "Nick: **********\n",
       "ID: 1712879\n",
-      "Nível: 74\n",
-      "Total de Partidas: 2263\n",
+      "Nível: 75\n",
+      "Total de Partidas: 2264\n",
       "Total de Tempo de Jogo (estimado): 1320 horas\n",
       "Campeão preferido: Lee Sin\n",
-      "Maestria com o Campeão: 174866\n",
+      "Maestria com o Campeão: 175084\n",
       "Elo: GOLD\n",
       "Divisão: I\n",
       "Vitórias: 54\n",
-      "Derrotas: 54\n",
-      "Porcentagem de Vitórias: 50.0%\n",
+      "Derrotas: 55\n",
+      "Porcentagem de Vitórias: 49.54%\n",
       "==================================================================\n",
       "Nick: **********\n",
       "ID: 207477917\n",
-      "Nível: 82\n",
-      "Total de Partidas: 1728\n",
-      "Total de Tempo de Jogo (estimado): 1008 horas\n",
+      "Nível: 83\n",
+      "Total de Partidas: 1743\n",
+      "Total de Tempo de Jogo (estimado): 1016 horas\n",
       "Campeão preferido: Lulu\n",
-      "Maestria com o Campeão: 86998\n",
+      "Maestria com o Campeão: 87149\n",
       "Elo: GOLD\n",
       "Divisão: IV\n",
       "Vitórias: 36\n",
@@ -243,11 +243,11 @@
       "==================================================================\n",
       "Nick: **********\n",
       "ID: 211498111\n",
-      "Nível: 141\n",
-      "Total de Partidas: 4321\n",
-      "Total de Tempo de Jogo (estimado): 2520 horas\n",
+      "Nível: 142\n",
+      "Total de Partidas: 4307\n",
+      "Total de Tempo de Jogo (estimado): 2512 horas\n",
       "Campeão preferido: Lux\n",
-      "Maestria com o Campeão: 221069\n",
+      "Maestria com o Campeão: 223539\n",
       "Elo: PLATINUM\n",
       "Divisão: V\n",
       "Vitórias: 48\n",
@@ -257,8 +257,8 @@
       "Nick: **********\n",
       "ID: 201497079\n",
       "Nível: 38\n",
-      "Total de Partidas: 3199\n",
-      "Total de Tempo de Jogo (estimado): 1866 horas\n",
+      "Total de Partidas: 3152\n",
+      "Total de Tempo de Jogo (estimado): 1838 horas\n",
       "Campeão preferido: Thresh\n",
       "Maestria com o Campeão: 184854\n",
       "Elo: GOLD\n",
@@ -269,22 +269,22 @@
       "==================================================================\n",
       "Nick: **********\n",
       "ID: 202581137\n",
-      "Nível: 86\n",
-      "Total de Partidas: 2551\n",
-      "Total de Tempo de Jogo (estimado): 1488 horas\n",
+      "Nível: 87\n",
+      "Total de Partidas: 2554\n",
+      "Total de Tempo de Jogo (estimado): 1489 horas\n",
       "Campeão preferido: Thresh\n",
-      "Maestria com o Campeão: 409423\n",
+      "Maestria com o Campeão: 419324\n",
       "Elo: GOLD\n",
-      "Divisão: V\n",
-      "Vitórias: 99\n",
-      "Derrotas: 82\n",
-      "Porcentagem de Vitórias: 54.7%\n",
+      "Divisão: IV\n",
+      "Vitórias: 103\n",
+      "Derrotas: 84\n",
+      "Porcentagem de Vitórias: 55.08%\n",
       "==================================================================\n",
       "Nick: **********\n",
       "ID: 214430474\n",
-      "Nível: 46\n",
-      "Total de Partidas: 404\n",
-      "Total de Tempo de Jogo (estimado): 235 horas\n",
+      "Nível: 47\n",
+      "Total de Partidas: 408\n",
+      "Total de Tempo de Jogo (estimado): 238 horas\n",
       "Campeão preferido: Tryndamere\n",
       "Maestria com o Campeão: 16936\n",
       "Elo: SILVER\n",
@@ -295,9 +295,9 @@
       "==================================================================\n",
       "Nick: **********\n",
       "ID: 211196129\n",
-      "Nível: 122\n",
-      "Total de Partidas: 3109\n",
-      "Total de Tempo de Jogo (estimado): 1813 horas\n",
+      "Nível: 123\n",
+      "Total de Partidas: 3141\n",
+      "Total de Tempo de Jogo (estimado): 1832 horas\n",
       "Campeão preferido: Ryze\n",
       "Maestria com o Campeão: 100737\n",
       "Elo: GOLD\n",
@@ -308,35 +308,35 @@
       "==================================================================\n",
       "Nick: **********\n",
       "ID: 201726538\n",
-      "Nível: 87\n",
-      "Total de Partidas: 1061\n",
-      "Total de Tempo de Jogo (estimado): 618 horas\n",
+      "Nível: 89\n",
+      "Total de Partidas: 1078\n",
+      "Total de Tempo de Jogo (estimado): 628 horas\n",
       "Campeão preferido: Lux\n",
       "Maestria com o Campeão: 118924\n",
       "Elo: SILVER\n",
       "Divisão: I\n",
-      "Vitórias: 121\n",
-      "Derrotas: 132\n",
-      "Porcentagem de Vitórias: 47.83%\n",
+      "Vitórias: 125\n",
+      "Derrotas: 137\n",
+      "Porcentagem de Vitórias: 47.71%\n",
       "==================================================================\n",
       "Nick: **********\n",
       "ID: 204211392\n",
-      "Nível: 102\n",
-      "Total de Partidas: 2653\n",
-      "Total de Tempo de Jogo (estimado): 1547 horas\n",
+      "Nível: 103\n",
+      "Total de Partidas: 2651\n",
+      "Total de Tempo de Jogo (estimado): 1546 horas\n",
       "Campeão preferido: Yasuo\n",
       "Maestria com o Campeão: 86505\n",
       "Elo: PLATINUM\n",
       "Divisão: V\n",
       "Vitórias: 131\n",
-      "Derrotas: 133\n",
-      "Porcentagem de Vitórias: 49.62%\n",
+      "Derrotas: 136\n",
+      "Porcentagem de Vitórias: 49.06%\n",
       "==================================================================\n",
       "Nick: **********\n",
       "ID: 209546058\n",
-      "Nível: 109\n",
-      "Total de Partidas: 4250\n",
-      "Total de Tempo de Jogo (estimado): 2479 horas\n",
+      "Nível: 110\n",
+      "Total de Partidas: 4219\n",
+      "Total de Tempo de Jogo (estimado): 2461 horas\n",
       "Campeão preferido: Thresh\n",
       "Maestria com o Campeão: 216549\n",
       "Elo: PLATINUM\n",
@@ -348,8 +348,8 @@
       "Nick: **********\n",
       "ID: 212605830\n",
       "Nível: 77\n",
-      "Total de Partidas: 2413\n",
-      "Total de Tempo de Jogo (estimado): 1407 horas\n",
+      "Total de Partidas: 2414\n",
+      "Total de Tempo de Jogo (estimado): 1408 horas\n",
       "Campeão preferido: Jinx\n",
       "Maestria com o Campeão: 123404\n",
       "Elo: SILVER\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
